Fix text alignment

--- a/src/app/components/book-new/book-new.component.scss
+++ b/src/app/components/book-new/book-new.component.scss
@@ -3,8 +3,7 @@ h2 {
 }
 form {
   margin-left: 1rem;
-  text-align: justify;
-  text-justify: inter-word;
+  text-align: left;
 }
 label {
   margin-right: 1rem;
